@@ -452,6 +452,7 @@ All:
 
 - Added wxLogFormatter to allow customizing wxLog output (Sébastien Gallou).
 - Added "%z" support to wxDateTime::Format() and Parse() (Armel Asselin).
+- Add wxHTTP::SetPostBuffer(wxMemoryBuffer) and SetPostText() (Eran Ifrah).
 
 All (GUI):
 
